// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextButton renders correctly - default (with underline) 1`] = `
<View
  accessibilityLabel="Forgot Password?"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    style={
      {
        "opacity": 1,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#A6A6A6",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 14,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textAlign": "left",
          },
          {
            "textDecorationLine": "underline",
          },
        ]
      }
    >
      Forgot Password?
    </Text>
  </View>
</View>
`;

exports[`TextButton renders correctly - disabled 1`] = `
<View
  accessibilityLabel="Resend OTP"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    style={
      {
        "opacity": 1,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#797979",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 14,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textAlign": "left",
          },
          {
            "textDecorationLine": "underline",
          },
        ]
      }
    >
      Resend OTP
    </Text>
  </View>
</View>
`;

exports[`TextButton renders correctly - with custom style 1`] = `
<View
  accessibilityLabel="Custom"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "marginTop": 16,
    }
  }
>
  <View
    style={
      {
        "opacity": 1,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#A6A6A6",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 14,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textAlign": "left",
          },
          {
            "textDecorationLine": "underline",
          },
        ]
      }
    >
      Custom
    </Text>
  </View>
</View>
`;

exports[`TextButton renders correctly - without underline 1`] = `
<View
  accessibilityLabel="Skip"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    style={
      {
        "opacity": 1,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#A6A6A6",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 14,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textAlign": "left",
          },
          false,
        ]
      }
    >
      Skip
    </Text>
  </View>
</View>
`;

exports[`TextButton renders with empty string title 1`] = `
<View
  accessibilityLabel=""
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    style={
      {
        "opacity": 1,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#A6A6A6",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 14,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textAlign": "left",
          },
          {
            "textDecorationLine": "underline",
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`TextButton renders with long text 1`] = `
<View
  accessibilityLabel="This is a very long button title that might overflow the container width"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    style={
      {
        "opacity": 1,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#A6A6A6",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 14,
            "letterSpacing": 0,
            "lineHeight": 20,
            "textAlign": "left",
          },
          {
            "textDecorationLine": "underline",
          },
        ]
      }
    >
      This is a very long button title that might overflow the container width
    </Text>
  </View>
</View>
`;
